<resources>
    <string name="app_name">NotifyHSEQ</string>
    <string name="action_settings">Settings</string>
    <string name="New_notify">New notify</string>
    <string name="New_notify_data">Data</string>
    <string name="New_notify_time">Time</string>
    <string name="Curent_Data">Curent date</string>
    <string name="Curent_Time">Curent time</string>
    <string name="New_notify_place">Place:</string>
    <string name="New_notify_Department">Department:</string>
    <string name="New_notify_AcidentType">Notify type:</string>
    <string name="New_notify_Description">Description:</string>
    <string name="Save_Notify">Save data</string>
    <string name="Send_Notify">Send data</string>
    <string name="New_notify_Description_Text">No text</string>
    <string name="get_date">Get Date</string>
    <string name="get_time">Get time</string>

    <string-array name="Place">
        <item>No choice</item>
        <item>Office</item>
        <item>Warehouse</item>
        <item>Plant</item>
        <item>Therritory</item>
        <item>Brache</item>
        <item>Out our therritory</item>
        <item>Other</item>
    </string-array>

    <string-array name="Department">
        <item>No choice</item>
        <item>Manufanctirung</item>
        <item>Logistic</item>
        <item>Maintenance</item>
        <item>Legal</item>
        <item>HR</item>
        <item>HS</item>
    </string-array>

    <string-array name="AccidentType">
        <item>No choice</item>
        <item>Near Miss</item>
        <item>Near Loss</item>
        <item>LTA</item>
        <item>Near Mess</item>
        <item>Observation</item>
        <item>Best practice</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New Notify</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Delete_Notify">Delete</string>
    <string name="update_notify">Update</string>
    <string name="enter_text_please">Enter text please</string>
    <string name="registered">Registered:</string>
    <string name="happened">Happened:</string>
    <string name="edit_notify">Edit</string>
    <string name="view_notify">View</string>
    <string name="signout">Sign out</string>
    <string name="delete_image">Delete Image</string>
    <string name="take_photo">Take photo</string>
    <string name="photo">Photo</string>

    <string name="title_activity_photo_show">PhotoShow</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="notify_hseq">Notify HSEQ</string>


</resources>
